--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -73,7 +73,7 @@ code, pre {
 
 pre {
   padding:8px 15px;
-  background: #f8f8f8;
+  background: #0000001a;
   border-radius:5px;
   border:1px solid #e5e5e5;
   overflow-x: auto;
@@ -115,13 +115,13 @@ header ul {
 
   padding:0;
 
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: rgb(0, 0, 0);
+  background: -moz-linear-gradient(top, #000000 0%, #000000 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#000000));
+  background: -webkit-linear-gradient(top, #000000 0%,#000000 100%);
+  background: -o-linear-gradient(top, #000000 0%,#000000 100%);
+  background: -ms-linear-gradient(top, #000000 0%,#000000 100%);
+  background: linear-gradient(top, #000000 0%,#000000 100%);
 
   border-radius:5px;
   border:1px solid #d2d2d2;
@@ -156,12 +156,12 @@ header ul a {
 
 header ul a:hover {
   color:#999;
-  background: -moz-linear-gradient(top, #fff 0%, #ddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#ddd));
-  background: -webkit-linear-gradient(top, #fff 0%,#ddd 100%);
-  background: -o-linear-gradient(top, #fff 0%,#ddd 100%);
-  background: -ms-linear-gradient(top, #fff 0%,#ddd 100%);
-  background: linear-gradient(top, #fff 0%,#ddd 100%);
+  background: -moz-linear-gradient(top, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(0, 0, 0)), color-stop(100%,rgb(0, 0, 0)));
+  background: -webkit-linear-gradient(top, rgb(0, 0, 0) 0%,rgb(0, 0, 0) 100%);
+  background: -o-linear-gradient(top, rgb(0, 0, 0) 0%,rgb(0, 0, 0) 100%);
+  background: -ms-linear-gradient(top, rgb(0, 0, 0) 0%,rgb(0, 0, 0) 100%);
+  background: linear-gradient(top, rgb(0, 0, 0) 0%,rgb(0, 0, 0) 100%);
 }
 
 header ul a:active {
@@ -203,7 +203,7 @@ small {
 
 hr {
   border:0;
-  background:#e5e5e5;
+  background:#000000;
   height:1px;
   margin:0 0 20px;
 }
@@ -282,6 +282,6 @@ footer {
   body {
     padding:0.4in;
     font-size:12pt;
-    color:#444;
+    color:rgb(197, 188, 188);
   }
 }
