--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,13 +2,14 @@
 
 body {
   padding:50px;
-  font:15px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
+  font:16px/1.5 Lato, sans-serif;
+  color: #fff;
+  background-color: rgb(0, 0, 0);
   font-weight:300;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#fff;
   margin:0 0 20px;
 }
 
@@ -21,36 +22,37 @@ h1, h2, h3 {
 }
 
 h1 {
+  color: #fff;
   font-size:28px;
 }
 
 h2 {
-  color:#393939;
+  color:#fff;
 }
 
 h3, h4, h5, h6 {
-  color:#494949;
+  color:#ffffff;
 }
 
 a {
-  color:#39c;
+  color:#0daf6c;
   font-weight:400;
   text-decoration:none;
 }
 
 a:hover {
-  color:#069;
+  color:#b467e7;
 }
 
 a small {
   font-size:11px;
-  color:#777;
+  color:#0daf6c;
   margin-top:-0.6em;
   display:block;
 }
 
 a:hover small {
-  color:#777;
+  color:#0daf6c;
 }
 
 .wrapper {
@@ -59,7 +61,7 @@ a:hover small {
 }
 
 blockquote {
-  border-left:1px solid #e5e5e5;
+  border-left:1px solid #000000;
   margin:0;
   padding:0 0 0 20px;
   font-style:italic;
@@ -75,7 +77,7 @@ pre {
   padding:8px 15px;
   background: #0000001a;
   border-radius:5px;
-  border:1px solid #e5e5e5;
+  border:1px solid #000000;
   overflow-x: auto;
 }
 
@@ -87,7 +89,7 @@ table {
 th, td {
   text-align:left;
   padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+  border-bottom:1px solid #000000;
 }
 
 dt {
@@ -107,6 +109,7 @@ header {
   width:350px;
   float:left;
   position:fixed;
+  color: #fff;
 }
 
 header ul {
@@ -115,7 +118,7 @@ header ul {
 
   padding:0;
 
-  background: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
   background: -moz-linear-gradient(top, #000000 0%, #000000 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(100%,#000000));
   background: -webkit-linear-gradient(top, #000000 0%,#000000 100%);
@@ -124,15 +127,15 @@ header ul {
   background: linear-gradient(top, #000000 0%,#000000 100%);
 
   border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
+  border:1px solid #000000;
+  box-shadow:inset rgb(0, 0, 0) 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
   width:270px;
 }
 
 header li {
   width:89px;
   float:left;
-  border-right:1px solid #d2d2d2;
+  border-right:1px solid #000000;
   height:40px;
 }
 
@@ -147,7 +150,7 @@ header li:last-child a {
 header ul a {
   line-height:1;
   font-size:11px;
-  color:#999;
+  color:rgb(255, 255, 255);
   display:block;
   text-align:center;
   padding-top:6px;
@@ -155,7 +158,7 @@ header ul a {
 }
 
 header ul a:hover {
-  color:#999;
+  color:rgb(255, 255, 255);
   background: -moz-linear-gradient(top, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(0, 0, 0)), color-stop(100%,rgb(0, 0, 0)));
   background: -webkit-linear-gradient(top, rgb(0, 0, 0) 0%,rgb(0, 0, 0) 100%);
@@ -171,7 +174,7 @@ header ul a:active {
 }
 
 strong {
-  color:#222;
+  color:rgb(255, 255, 255);
   font-weight:700;
 }
 
@@ -203,7 +206,7 @@ small {
 
 hr {
   border:0;
-  background:#000000;
+  background:#ffffff;
   height:1px;
   margin:0 0 20px;
 }
