--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,8 +20,9 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: $lighter-gray;
-  border-top: 1px solid $light-gray; 
+  background-color: #333333;
+  // border-top: 1px solid $light-gray; 
+  border-top: 1px solid $white; 
 
   footer {
     @include clearfix;
