--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -21,8 +21,8 @@
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
   background-color: #333333;
-  // border-top: 1px solid $light-gray; 
-  border-top: 1px solid $white; 
+  border-top: 1px solid $light-gray; 
+
 
   footer {
     @include clearfix;
