FG Update alternative

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,8 @@
    
    /* system typefaces */
    $serif                      : Georgia, Times, serif;
-   $sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+   /* $sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif; */
+   $sans-serif                 : "Roboto";
    $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
    
    /* sans serif typefaces */
